# Microphone-Echo-Filter

./: CMakeLists.txt  README.md  gstreamer_cmd_commands.txt  main.cpp
lib/: gstreamer.cpp  gstreamer.hpp
